# RLStockTradingDQN

./: .env-example  .gitignore  README.md  pyproject.toml
config/: rate_limits.yaml  setup.yaml
docs/: AI_CHAT_LOG.md  AI_WORKFLOW.md  ASSESSMENT_COVERAGE.md  COST_ANALYSIS.md  EXPERIMENTS.md  PLAN.md  PRD.md  PRD_backtest.md  PRD_data_pipeline.md  PRD_dqn_algorithm.md  PRD_gui.md  PRD_reward_function.md  PRD_trading_environment.md  RL_TUTORIAL.md  SOURCE_CONTROL.md  TODO.md  VERSION_HISTORY.md  architecture.mmd  class_diagram.mmd
results/: summary.md
results/experiments/: REPORT.md  summary.json
results/experiments/aapl_basic_reward/: backtest_metrics.json  training_metrics.json
results/experiments/aapl_risk_adjusted/: backtest_metrics.json  training_metrics.json
results/multi_stock/: REPORT.md  summary.csv  summary.json
results/multi_stock/aapl/: backtest_metrics.json  training_metrics.json
results/multi_stock/amzn/: backtest_metrics.json  training_metrics.json
results/multi_stock/crwd/: backtest_metrics.json  training_metrics.json
results/multi_stock/ko/: backtest_metrics.json  training_metrics.json
results/multi_stock/mcd/: backtest_metrics.json  training_metrics.json
scripts/: generate_readme_assets.py  run_experiments.py  run_multi_stock_research.py
src/dqn_trader/: __init__.py  main.py
src/dqn_trader/config/: manager.py
tests/: conftest.py
tests/integration/: test_training_sdk.py
tests/unit/: test_config.py  test_data_client.py  test_env_reward.py  test_evaluation.py  test_features.py  test_model_memory.py  test_sdk_env.py
(+24 files in other folders)
