[project]
name = "dqn-trader"
version = "1.00"
description = "Educational Dueling DQN stock-trading environment for RL course assignment 02."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "torch>=2.2",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
dqn-trader = "dqn_trader.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dqn_trader"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", ".uv-cache", "data", "results"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["src/dqn_trader/main.py", "src/dqn_trader/interface/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
